--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,31 +1,39 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>home</ion-title>
+    <ion-title>Test Image Compression</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <button ion-button block outline (click)="onFileAdd()">
+    ADD FILE
+  </button>
   <input
     id="input-file"
     name="input-file"
     type="file"
+    hidden
     (change)="onFileSelect($event)"
     #inputFile
   />
   <ion-list *ngIf="files && files.length > 0">
-    <ion-list-header>
-      Files
-    </ion-list-header>
+    <h4 no-margin>Files</h4>
     <ion-item *ngFor="let file of files, let i = index">
-      <div
-        class="file-thumbnail-container"
-        item-start
-        *ngIf="file.data.indexOf('image/') !== -1"
-      >
+      <div class="file-thumbnail-container" item-start *ngIf="isImage(file)">
         <img [src]="sanitizeURL(file.data)" />
       </div>
-      <span>{{ i + 1 }} - {{ file.name }}</span>
-      <button ion-button color="dark" clear icon-only item-end (click)="onFileDelete(i)">
+      <div class="file-title">
+        {{ i + 1 }} - {{ file.name }}
+      </div>
+      <div class="file-size">{{ file.size | filesize }}</div>
+      <button
+        ion-button
+        color="dark"
+        clear
+        icon-only
+        item-end
+        (click)="onFileDelete(i)"
+      >
         <ion-icon name="trash"></ion-icon>
       </button>
     </ion-item>
