Add image picker and read base64 files as blob.
Add prettier configuration, fix imagepicker plugin configuration.

Add and save Androd/iOS platforms.

Bugfix: add Compressor import.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,6 +5,9 @@
 </ion-header>
 
 <ion-content padding>
+  <button ion-button block outline (click)="onImageAdd()">
+    ADD IMAGE
+  </button>
   <button ion-button block outline (click)="onFileAdd()">
     ADD FILE
   </button>
