Add ZIP file generation, refactor file reading.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -35,3 +35,12 @@
     </ion-item>
   </ion-list>
 </ion-content>
+<ion-footer padding>
+  <ion-item no-padding *ngIf="zipFile">
+    <div>ZIP Generated</div>
+    <div>Size: {{ zipFile.length | filesize }}</div>
+  </ion-item>
+  <button ion-button block (click)="onGenerateZip()">
+    GENERATE ZIP
+  </button>
+</ion-footer>
